--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <html>
+<head>
+
+  <title>js-fzy4yf</title>  
+</head>
+<body>
+<html>
 
 <head>
-	<title>Parcel Sandbox</title>
+	<title>Lynda</title>
 	<meta charset="UTF-8" />
-  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav>
+      <img src="https://sm.pcmag.com/pcmag_uk/review/l/lyndacom-f/lyndacom-from-linkedin_t76h.jpg" height="60px" width="160px">
 			<ul>
-				<li>Become a host</li>
-				<li>Earn credit</li>
-				<li>Help</li>
-				<li>Sign in</li>
+				<li>Buy For My Team</li>
+				<li>Sign Up</li>
+				<li>Log In</li>
+				<li>Reactivate</li>
 			</ul>
-		</nav>	
+		</nav>
 	</header>
 	<section>
     <div>
-      <h1>Reserva alojamientos y experiencias especiales alrededor del mundo.</h1>
-		  <form>
-			  <input type="text" name="search" id="search" placeholder="try: Homes in Huancayo"/>
-		  </form>
+      <h2>ONLINE VIDEO COURSES</h2>
+      <h1>Lynda.com is now <br> LinkedIn Learning.</h1>
+      <p>LinkedIn Learning combines 100% of Lynda.com’s courses with <br> LinkedIn data to give you personalized learning</p>
+      <h2>Try LinkedIn Learning free for 1-month</h2> 
     </div>
+  
 	</section>
 	<script src="src/index.js"></script>
 </body>
 
+</html>
+
+</body>
 </html>
